--- a/Lesson4HW/app/src/main/res/values/strings.xml
+++ b/Lesson4HW/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">Lesson4HW</string>
+    <string name="app_name">TO DO LIST</string>
+    <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
