--- a/Lesson3HW2/app/src/main/res/values/strings.xml
+++ b/Lesson3HW2/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">TO DO LIST</string>
     <string name="action_settings">Settings</string>
-
+    <string name="back">Back</string>
+    <string name="todo_title">To Do</string>
+    <string name="dialog_title">What to do?</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
 </resources>
